# ospsurvey

./: .gitignore  README.adoc  README.md  cloud_survey.sh  ospsurvey.py  setup.cfg  setup.py
docs/: stackrc_variables.adoc
ospsurvey/: stack.py
profiles/: osp-13.yaml
python/: check_roles.py  ospsurvey.py
python/ospsurvey/: __init__.py  collect.py  version.py
python/src/: version.py
python/tests/: context.py  test_version.py
python/tests/data/: python-tripleoclient-rpm-info-not-installed  python-tripleoclient-rpm-info-osp9  rhosp-release  stackrc_osp10  stackrc_osp12  stackrc_osp9
scripts/: cloud_survey.sh  version.sh
src/ospsurvey/: __init__.py  collect.py  deunicode.py  version.py
src/ospsurvey/probes/: endpoints.py  nodes.py  servers.py  services.py  sm.py  software.py  stack.py  subscription.py  yum.py
test/data/: python_package_info  rhosp-release-bad  servers.json
tests/: ospsurvey_conf.yaml  rhosp-release-13  test_deunicode.py  test_probes.py  test_sample.py  test_software.py  test_version.py
tests/data/: service_list.json  service_nova.json  stackrc_osp13  up2date
