[metadata]
name = ospsurvey
version = attr: src.VERSION
description = Survey an OpenStack Cluster
#long_description = file: README.adoc, CHANGELOG, LICENSE
license: Apache 2.0 License
license_file: LICENSE
classifiers =
    License :: OSI Approved :: Apache 2.0 License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
include_package_data = True
packages = find:
scripts =
  bin/ospsurvey.py

package_dir=
  =src

packages=find:

install_requires =
  keystoneauth1
  keystoneclient
  novaclient

[options.packages.find]
where=src

